@@ -863,12 +863,18 @@ at
 . The adapter allows the
 control of GPIB devices with some limitations: it can only be
 the system controller; multicontroller and device operations
-are not supported (by now).
-The linux-gpib driver 'lpvo_usb_gpib' is currently under
-development. It offers basic capabilities like ibrd(),
-ibwrt(), WaitSRQ() and something else. Requests for not
-available features are flagged by a diagnostic message
-to syslog.
+are not supported (as yet).
+The linux-gpib driver 'lpvo_usb_gpib', written at the
+Department of Physics of University of Florence (Italy),
+is currently under development.
+It offers basic capabilities like ibrd(),
+ibwrt(), WaitSRQ() and others. Requests for unsupported
+features are flagged by a diagnostic message to syslog.
+The driver assumes by default that the adapter is connected
+to port ttyUSB0.
+It is possible to change the 0 into any value x in the
+range 0-99 with the gpib_config option -b x (or base = x
+in the configuration file).
 </para>
 </section>
 <section ID="ni-usb-b">
