@@ -1,6 +1,14 @@
-2013-12-12 15:41 dpenkler
+2014-11-08 18:30 dpenkler
 
-	* [r1619] Added patch for lpvo_usb_gpib from Marcello 
+	* [r1620] Reverted gpib_config.c use init script to initialise lpvo_usb_gpib instead
+         - Updated lpvo documentation from Marcello
+	 - Added patch11 for bison3.02 from Stephan Boettcher
+	 - Modified IbConfYacc.y for backward compatibility with bison2.7
+	 - Bumped distribution version to 3.2.21
+
+2014-04-08 17:02 dpenkler
+
+	* [r1619] Added patch for lpvo_usb_gpib from Marcello
 	 - moves setting of ttyusb parameters to user space
 
 2013-12-13 15:41 dpenkler
